# dsviper-database-tools

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEFINITIONS_MIGRATE.md  MIGRATION_GUIDE.md  README.md  REWRITE.md  SUPPORT.md  database_migrate.py  definitions_migrate.py  pyproject.toml  requirements.txt  soak.py  soak_commit.py
dsviper_database_tools/: __init__.py  blobs.py  commit_migrate.py  directives.py  migrate.py  migrate_commit_database.py  migrate_database.py  rewrite.py  verify.py
dsviper_database_tools/rewrite/: __init__.py  directives.py  engine.py  plan.py  report.py
examples/: migration_shop_v2.py
tests/: test_commit_migrate.py  test_definitions_migrate.py  test_governance.py  test_migrate.py  test_migrate_commit_database.py  test_migrate_database.py  test_plan.py  test_report.py  test_rewrite.py  test_verify.py  test_verify_commit_database.py  test_verify_database.py
