[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dsviper-database-tools"
version = "0.2.4"
description = "Definitions-directed document rewriting and database migration for Viper — a declarative edit script (renames + shape changes + decreed policies) and a target-directed rewrite engine, in pure Python over the dsviper binding. Rebuild Base(A) into a fresh Base(B); the source stays as rollback."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Digital Substrate" }]
keywords = ["dsviper", "viper", "migration", "schema", "database", "rewrite"]
dependencies = ["dsviper>=1.2.20"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/digital-substrate/dsviper-database-tools#readme"
Repository = "https://github.com/digital-substrate/dsviper-database-tools"
Issues = "https://github.com/digital-substrate/dsviper-database-tools/issues"

[tool.hatch.build.targets.wheel]
packages = ["dsviper_database_tools"]

[tool.hatch.build.targets.sdist]
include = ["dsviper_database_tools", "database_migrate.py", "definitions_migrate.py",
           "tests", "examples", "REWRITE.md", "DEFINITIONS_MIGRATE.md", "MIGRATION_GUIDE.md",
           "SUPPORT.md", "README.md", "CHANGELOG.md", "LICENSE"]
